--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "hc",
-    "appid" : "__UNI__0606595",
+    "appid" : "__UNI__910754C",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
